# framecast

./: .env.example  .env.test  .gitignore  .markdown-link-check.json  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  CLAUDE.md  Cargo.toml  Justfile  PLAN.md  README.md  TEST_STRATEGY.md  docker-compose.local.yml  docker-compose.localstack.yml  env.json.example  pyproject.toml  samconfig.toml  template.yaml
.cargo/: audit.toml  mutants.toml
.claude/: README.md  settings.json
.sqlx/: query-0387e265e95d05d17873a44be26f74a9e1816e6d738b4dbfbd19edafe354ca2e.json  query-0faa72ef34b04a25fa93b89a871a94e5a6d1c416cdf41cf45c2d348f9e9b1c1a.json  query-10169e7866fb3012c0d2fac167eafffed7863b8735e75207792195bf97bf0293.json  query-15a4e7b8cce458a690b62d4a18acc827f48c90c850cf839e618f395a198a542f.json  query-185d41453db063e55dffc779ace5106a421f720b6d3f937c0af02f51f45d2064.json  query-191091f6d901c6b1615a402bb02389d0aa7704f24617fe5cddabd7a02ef3a00b.json  (+49 more)
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  middleware.rs  routes.rs  validation.rs
crates/api/src/handlers/: memberships.rs  mod.rs  teams.rs  users.rs
crates/api/src/middleware/: auth.rs  mod.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: backend.rs  claims.rs  config.rs  context.rs  error.rs  extractors.rs  jwt.rs  lib.rs  types.rs
crates/comfyui/: Cargo.toml
crates/comfyui/src/: client.rs  lib.rs  models.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crypto.rs  db.rs  error.rs  extractors.rs  lib.rs  state.rs  urn.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  migrations.rs  repositories.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  entities.rs  events.rs  lib.rs  state.rs  validation.rs
crates/email/: Cargo.toml
crates/email/src/: aws_ses.rs  content.rs  lib.rs  mock.rs  templates.rs
crates/inngest/: Cargo.toml
crates/inngest/src/: client.rs  events.rs  lib.rs  mock.rs
crates/runpod/: Cargo.toml
crates/runpod/src/: lib.rs  mock.rs
docs/: PRE_COMMIT_SETUP.md
domains/artifacts/: Cargo.toml
domains/artifacts/src/: lib.rs
domains/artifacts/src/api/: middleware.rs  mod.rs  routes.rs
domains/artifacts/src/api/handlers/: artifacts.rs  mod.rs  system_assets.rs
domains/artifacts/src/domain/: entities.rs  mod.rs  state.rs
domains/artifacts/src/repository/: artifacts.rs  mod.rs  system_assets.rs  transactions.rs
domains/conversations/: Cargo.toml
domains/conversations/src/: lib.rs
domains/conversations/src/api/: middleware.rs  mod.rs  routes.rs
domains/conversations/src/api/handlers/: conversations.rs  messages.rs  mod.rs
domains/conversations/src/domain/: entities.rs  mod.rs  state.rs
domains/conversations/src/repository/: conversations.rs  messages.rs  mod.rs
domains/generations/: Cargo.toml
domains/generations/src/: lib.rs
domains/generations/src/api/: middleware.rs  mod.rs  routes.rs
domains/generations/src/api/handlers/: callbacks.rs  generations.rs  mock_admin.rs  mod.rs
domains/generations/src/domain/: entities.rs  mod.rs  state.rs
domains/generations/src/repository/: generation_events.rs  generations.rs  mod.rs  transactions.rs
domains/jobs/: Cargo.toml
domains/jobs/src/: lib.rs
domains/jobs/src/api/: middleware.rs  mod.rs  routes.rs
domains/jobs/src/api/handlers/: callbacks.rs  jobs.rs  mock_admin.rs  mod.rs
domains/jobs/src/domain/: entities.rs  mod.rs  state.rs
domains/jobs/src/repository/: job_events.rs  jobs.rs  mod.rs  transactions.rs
domains/projects/: Cargo.toml
domains/projects/src/: lib.rs
domains/projects/src/domain/: entities.rs  mod.rs  state.rs
domains/teams/: Cargo.toml
domains/teams/src/: lib.rs
domains/teams/src/api/: middleware.rs  mod.rs  routes.rs
domains/teams/src/api/handlers/: api_keys.rs  auth.rs  memberships.rs  mod.rs  teams.rs  users.rs
domains/teams/src/domain/: auth.rs  entities.rs  mod.rs  state.rs
domains/teams/src/repository/: api_keys.rs  invitations.rs  memberships.rs  mod.rs  teams.rs  transactions.rs  users.rs
domains/webhooks/: Cargo.toml
domains/webhooks/src/: lib.rs
domains/webhooks/src/domain/: entities.rs  mod.rs  state.rs
migrations/: README.md  (+22 more)
tests/e2e/: conftest.py  pyproject.toml  strategies.py
tests/e2e/tests/: __init__.py  test_api_keys_e2e.py  test_artifact_crud_e2e.py  test_auth.py  test_character_flow_e2e.py  test_conversation_lifecycle_e2e.py  test_cross_domain_e2e.py  test_data_integrity_e2e.py  test_error_handling_e2e.py  test_generation_access_control_e2e.py  test_generation_concurrency_e2e.py  test_generation_crud_e2e.py  test_generation_events_sse_e2e.py  test_generation_lifecycle_e2e.py  test_invitation_email_e2e.py  test_invitation_lifecycle_e2e.py  test_invitation_workflow_e2e.py  test_job_access_control_e2e.py  test_job_concurrency_e2e.py  test_job_crud_e2e.py  test_job_events_sse_e2e.py  test_job_lifecycle_e2e.py  test_membership_management_e2e.py  test_message_e2e.py  test_multi_user_scenarios_e2e.py  test_render_flow_e2e.py  test_role_based_access_e2e.py  test_sam_e2e.py  test_signup_jit_e2e.py  test_system_assets_e2e.py  test_team_crud_e2e.py  test_team_limits_e2e.py  test_team_management_e2e.py  test_user_account_e2e.py  test_user_journey_e2e.py  test_whoami_e2e.py
tests/e2e/utils/: __init__.py  localstack_email.py
tests/integration/: Cargo.toml  api_test.rs  email_ses_e2e_test.rs  invitation_workflow_demo.rs  invitation_workflow_test.rs  sam_local_test.rs  simple_test.rs
tests/integration/api_keys/: mod.rs
tests/integration/artifacts/: mod.rs
tests/integration/auth/: mod.rs
tests/integration/common/: email_mock.rs  localstack_client.rs  mod.rs
tests/integration/conversations/: mod.rs
tests/integration/errors/: mod.rs
tests/integration/generations/: mod.rs
tests/integration/invariants/: mod.rs
tests/integration/jobs/: mod.rs
tests/integration/memberships/: mod.rs
tests/integration/messages/: mod.rs
tests/integration/system_assets/: mod.rs
tests/integration/teams/: mod.rs
tests/integration/users/: mod.rs
(+197 files in other folders)
