[workspace]
members = [
    "crates/api",
    "crates/domain",
    "crates/db",
    "crates/email",
    "crates/inngest",
    "crates/comfyui",
    "crates/common",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "0.0.1-SNAPSHOT"
authors = ["Framecast Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/framecast/framecast"
rust-version = "1.75"

[workspace.dependencies]
# === Core Runtime Dependencies ===
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# === Database & ORM ===
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate"
] }

# === HTTP Client & Server ===
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# === AWS Lambda Runtime ===
lambda_http = { version = "0.13", default-features = false, features = ["apigw_http"] }

# === Configuration & Environment ===
config = "0.14"
dotenvy = "0.15"

# === Logging & Observability ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.31"

# === Authentication ===
jsonwebtoken = "9.3"
base64 = "0.22"

# === S3 & Object Storage ===
aws-config = "1.8"
aws-sdk-s3 = "1.122"

# === Validation & Time ===
validator = { version = "0.18", features = ["derive"] }
time = { version = "0.3", features = ["serde", "macros"] }
regex = "1.10"
lazy_static = "1.5"

# === Testing ===
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
tempfile = "3.8"
test-log = "0.2"
serial_test = "3.1"

# === Async Traits ===
async-trait = "0.1"

# === Shared Crates ===
framecast-common = { path = "crates/common" }
framecast-domain = { path = "crates/domain" }
framecast-db = { path = "crates/db" }
framecast-email = { path = "crates/email" }
