[workspace]
members = [
    "crates/app",
    "crates/auth",
    "crates/email",
    "crates/inngest",
    "crates/llm",
    "crates/runpod",
    "crates/common",
    "domains/teams",
    "domains/projects",
    "domains/jobs",
    "domains/webhooks",
    "domains/artifacts",
    "domains/conversations",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "0.0.1-SNAPSHOT"
authors = ["Framecast Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/framecast/framecast"
rust-version = "1.92"

[workspace.dependencies]
# === Core Runtime Dependencies ===
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# === Database & ORM ===
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
    "rust_decimal"
] }

# === HTTP Client & Server ===
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip"] }

# === AWS Lambda Runtime ===
lambda_http = { version = "0.13", default-features = false, features = ["apigw_http"] }

# === Configuration & Environment ===
dotenvy = "0.15"

# === Logging & Observability ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# === Authentication ===
jsonwebtoken = "9.3"
base64 = "0.22"
getrandom = "0.2"

# === AWS SDK ===
aws-config = "1.8"
aws-sdk-ses = "1.96"
aws-credential-types = "1.2"

# === Validation & Time ===
validator = { version = "0.20", features = ["derive"] }
regex = "1.10"

# === Mutation Testing ===
mutants = "0.0.3"

# === Testing ===
tokio-test = "0.4"
test-log = "0.2"

# === Async Traits ===
async-trait = "0.1"

# === Shared Crates ===
framecast-auth = { path = "crates/auth" }
framecast-common = { path = "crates/common" }
framecast-email = { path = "crates/email" }
framecast-inngest = { path = "crates/inngest" }
framecast-llm = { path = "crates/llm" }
framecast-runpod = { path = "crates/runpod" }
framecast-app = { path = "crates/app" }

# === Domain Crates ===
framecast-teams = { path = "domains/teams" }
framecast-projects = { path = "domains/projects" }
framecast-jobs = { path = "domains/jobs" }
framecast-webhooks = { path = "domains/webhooks" }
framecast-artifacts = { path = "domains/artifacts" }
framecast-conversations = { path = "domains/conversations" }

# === Cryptography ===
sha2 = "0.10"
hex = "0.4"

# === Additional Dependencies ===
rust_decimal = { version = "1.0", features = ["serde"] }

# Mutation testing profile — disables debug info for faster builds
[profile.mutants]
inherits = "test"
debug = "none"
