[package]
name = "framecast-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "HTTP API handlers and Lambda runtime for Framecast"

[[bin]]
name = "lambda"
path = "src/bin/lambda.rs"

[[bin]]
name = "local"
path = "src/bin/local.rs"

[dependencies]
# Shared crates
framecast-common.workspace = true
framecast-domain.workspace = true
framecast-db.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# AWS Lambda
lambda_runtime.workspace = true
lambda-web.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
test-log.workspace = true