[package]
name = "framecast-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Authentication middleware: JWT validation, API key verification, axum extractors"

[dependencies]
# Shared crates
framecast-common.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# HTTP server (for extractors + IntoResponse)
axum.workspace = true

# Database (runtime queries for CQRS read models)
sqlx.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Mutation testing
mutants.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
