[package]
name = "framecast-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Shared utilities, configuration, and error handling for Framecast"

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Mutation testing
mutants.workspace = true

# Logging
tracing.workspace = true

# Validation
validator.workspace = true

# HTTP
axum.workspace = true

# Database
sqlx.workspace = true

# Cryptography
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
