[package]
name = "framecast-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Domain entities, business logic, and state machines for Framecast"

[dependencies]
# Shared crates
framecast-common.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Database mapping
sqlx.workspace = true

# Additional dependencies for entities
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64.workspace = true
getrandom.workspace = true
regex = "1.0"
rust_decimal = { version = "1.0", features = ["serde"] }

# Logging
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
