[package]
name = "framecast-email"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Email service: AWS SES integration, invitation templates"

[dependencies]
# === Core Dependencies ===
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# === AWS SDK ===
aws-config = { workspace = true }
aws-sdk-ses = { workspace = true }
aws-credential-types = { workspace = true }

# === Logging ===
tracing = { workspace = true }

# === Async Traits ===
async-trait = { workspace = true }

# === Testing ===
[dev-dependencies]
tokio-test = { workspace = true }
test-log = { workspace = true }
