[package]
name = "framecast-inngest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Inngest service: event-driven workflow orchestration"

[features]
test-support = []

[dependencies]
# Shared crates
framecast-common.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# HTTP client
reqwest = { workspace = true }

# Logging
tracing.workspace = true

# Async traits
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
