[package]
name = "framecast-runpod"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Render service: RunPod GPU compute backend for artifact rendering"

[features]
test-support = []

[dependencies]
# Shared crates
framecast-common.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

# HTTP client
reqwest = { workspace = true }

# Logging
tracing.workspace = true

# Async traits
async-trait.workspace = true

# Async runtime
tokio.workspace = true

[dev-dependencies]
tokio-test.workspace = true
