[package]
name = "framecast-artifacts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Artifacts domain: creative outputs (storyboards, media), system assets"

[dependencies]
# Shared crates
framecast-auth.workspace = true
framecast-common.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Database mapping
sqlx.workspace = true

# HTTP server (for API layer)
axum.workspace = true

# Validation (for request validation)
validator.workspace = true

# Additional dependencies for SystemAsset
regex.workspace = true
rust_decimal.workspace = true

# Mutation testing
mutants.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
