[package]
name = "framecast-conversations"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Conversations domain: LLM chat threads, messages"

[dependencies]
# Shared crates
framecast-auth.workspace = true
framecast-common.workspace = true
framecast-llm.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Database mapping
sqlx.workspace = true

# HTTP server (for API layer)
axum.workspace = true

# Validation (for request validation)
validator.workspace = true

# Mutation testing
mutants.workspace = true

# Logging
tracing.workspace = true

# Async traits
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
