[package]
name = "framecast-generations"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Generations domain: AI content generation instances, events, usage"

[dependencies]
# Shared crates
framecast-common.workspace = true
framecast-auth.workspace = true
framecast-inngest.workspace = true
framecast-runpod.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# HTTP framework
axum.workspace = true

# Database mapping
sqlx.workspace = true

# Regex for validation
regex = "1.0"

# Logging
tracing.workspace = true

# Async
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
async-stream = "0.3"

[features]
mock-render = []

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
