[package]
name = "framecast-jobs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Jobs domain: jobs, job events, usage"

[dependencies]
# Shared crates
framecast-common.workspace = true

# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Database mapping
sqlx.workspace = true

# Additional dependencies for entities
regex = "1.0"

# Mutation testing
mutants.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
