[package]
name = "framecast-integration-tests"
version = "0.0.1-SNAPSHOT"
edition = "2021"

[[test]]
name = "api_test"
path = "api_test.rs"

[dependencies]
# === Core Dependencies ===
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

# === HTTP Testing ===
axum = { workspace = true }
tower = { workspace = true }

# === Database Testing ===
sqlx = { workspace = true }

# === Testing Framework ===
test-log = { workspace = true }

# === Internal Crates ===
framecast-auth = { workspace = true }
framecast-teams = { workspace = true }
framecast-artifacts = { workspace = true }
framecast-conversations = { workspace = true }
framecast-llm = { workspace = true, features = ["test-support"] }
framecast-email = { workspace = true }
framecast-common = { workspace = true }

# === Authentication Testing ===
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

# === Configuration ===
dotenvy = { workspace = true }

# === Email Mock Dependencies ===
regex = { workspace = true }
